src/objects/MX_SB_SAC_Argumento__c.object
<CustomObject>
    <description>Se crea el objeto Personalizado para realizar la matriz de argumentos con base a la retención</description>
    <fields>
        <fullName>MX_SB_SAC_ArgumentoBBVA__c</fullName>
        <description>Se agrega el dialogo Argumento BBVA</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Argumento BBVA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_ArgumentoConcientizacion__c</fullName>
        <description>Se agrega el dialogo  argumento Concientización</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Argumento Concientización</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_ArgumentoEstadIsticasReales__c</fullName>
        <description>Se agrega el dialogo  argumento Argumento Estadísticas Reales</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Argumento Estadísticas Reales</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Color__c</fullName>
        <description>Se utiliza para filtrar el color  correspondiente a el caso.</description>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verde</fullName>
                </value>
                <value>
                    <fullName>Amarillo</fullName>
                </value>
                <value>
                    <fullName>Rojo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Producto__c</fullName>
        <description>Se utiliza para filtrar el producto correspondiente a el caso.</description>
        <label>Producto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Seguro Bancomer</fullName>
                </value>
                <value>
                    <fullName>Auto Seguro Dinámico</fullName>
                </value>
                <value>
                    <fullName>Auto Seguro Dinámico Amplio</fullName>
                </value>
                <value>
                    <fullName>Auto Seguro Dinámico Limitado</fullName>
                </value>
                <value>
                    <fullName>Auto Seguro Dinámico RC</fullName>
                </value>
                <value>
                    <fullName>Auto Seguro Basico Estandarizado</fullName>
                </value>
                <value>
                    <fullName>Auto Seguro Practico Alto</fullName>
                </value>
                <value>
                    <fullName>Auto Seguro Practico Bajo</fullName>
                </value>
                <value>
                    <fullName>RC Legalizado</fullName>
                </value>
                <value>
                    <fullName>Auto Nacionalizado</fullName>
                </value>
                <value>
                    <fullName>Auto Fronterizo</fullName>
                </value>
                <value>
                    <fullName>Conductor Seguro</fullName>
                </value>
                <value>
                    <fullName>RC USA</fullName>
                </value>
                <value>
                    <fullName>RC Carretero Obligatorio</fullName>
                </value>
                <value>
                    <fullName>Seguro de moto Bancomer</fullName>
                </value>
                <value>
                    <fullName>Alianza Honda</fullName>
                </value>
                <value>
                    <fullName>VW Venta Sin Crédito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_RazonCancelacion__c</fullName>
        <description>Se utiliza para filtrar la tipificación correspondiente al caso.</description>
        <label>Razón de cancelación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicidad</fullName>
                </value>
                <value>
                    <fullName>Economía Personal</fullName>
                </value>
                <value>
                    <fullName>Malas Ventas</fullName>
                </value>
                <value>
                    <fullName>Mal Servicio</fullName>
                </value>
                <value>
                    <fullName>Meses sin intereses</fullName>
                </value>
                <value>
                    <fullName>No especifica motivo</fullName>
                </value>
                <value>
                    <fullName>Otra Aseguradora</fullName>
                </value>
                <value>
                    <fullName>Venta</fullName>
                </value>
                <value>
                    <fullName>Créditos</fullName>
                </value>
                <value>
                    <fullName>Cobranza</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_SubDetalleCancelacion__c</fullName>
        <description>Se utiliza para filtrar la tipificación correspondiente al caso subdetalle.</description>
        <label>SubDetalle de cancelación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error en condiciones de venta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Argumento</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>ARG-{0000}</displayFormat>
        <label>Nombre de Argumento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Argumentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>